--- a/src/components/Chat/ConversationListItem/ConversationListItem.css
+++ b/src/components/Chat/ConversationListItem/ConversationListItem.css
@@ -9,12 +9,19 @@
   cursor: pointer;
 }
 
-.conversation-photo {
+.view {
   width: 50px;
   height: 50px;
-  border-radius: 50%;
-  object-fit: cover;
+  border-radius: 25px;
   margin-right: 10px;
+  text-align: center;
+  background-color: #183b4e;
+}
+
+.conversation-avatar {
+  color: white;
+  font-weight: bold;
+  padding-top: 10px;
 }
 
 .conversation-title {
